<resources>
    <string name="app_name">Auto Insurance</string>
    <string name="title_home">Home</string>
    <string name="title_car_health">Car Health</string>
    <string name="title_trips">Trips</string>
    <string name="title_insights">Insights</string>
    <string name="title_more">More</string>

    <string name="AutoInsightPOSTurl">http://54.152.74.58:8080/user/login</string>
    <string name="TestGetURL">http://api.openweathermap.org/data/2.5/weather?q=bengaluru&amp;appid=e730b8f2202b9f96e684c09f877baa38</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
