<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        app:showAsAction="always|withText"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_health"
        android:icon="@drawable/ic_health"
        app:showAsAction="always|withText"
        android:title="@string/title_car_health" />

    <item
        android:id="@+id/navigation_trips"
        android:icon="@drawable/ic_trips"
        app:showAsAction="always|withText"
        android:title="@string/title_trips" />

    <item
        android:id="@+id/navigation_insights"
        android:icon="@drawable/ic_insights"
        app:showAsAction="always|withText"
        android:title="@string/title_insights" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more"
        app:showAsAction="always|withText"
        android:title="@string/title_more" />

</menu>
